Bug 96981 - [KBL] [IGT Basic] gem_workarounds/basic-read test assertion failure
Summary: [KBL] [IGT Basic] gem_workarounds/basic-read test assertion failure
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: highest blocker
Assignee: Mika Kuoppala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-07-18 21:38 UTC by Luis Botello
Modified: 2016-08-26 14:00 UTC (History)
1 user (show)

See Also:
i915 platform: KBL
i915 features: GEM/Other


Attachments
dmesg (228.03 KB, text/plain)
2016-07-18 21:38 UTC, Luis Botello
no flags Details
drm/i915/kbl: Limit WaDisableDynamicCreditSharing to A0 (1.48 KB, patch)
2016-08-11 08:10 UTC, Mika Kuoppala
no flags Details | Splinter Review

Description Luis Botello 2016-07-18 21:38:18 UTC
Created attachment 125135 [details]
dmesg

Bug description
=============================
after execute gem_workarounds/basic-read gets a Test assertion failure

Steps to reproduce
=============================
./gem_workarounds--run-subtest basic-read 

Script output:
==============================
IGT-Version: 1.15-gee5d5c4 (x86_64) (Linux: 4.7.0-rc7-nightly x86_64)
(gem_workarounds:1213) WARNING: 0x04AB8 0x10000000      0x10000000      0x00000000      FAIL
(gem_workarounds:1213) CRITICAL: Test assertion failure function check_workarounds, file gem_workarounds.c:101:
(gem_workarounds:1213) CRITICAL: Failed assertion: workaround_fail_count() == 0
(gem_workarounds:1213) CRITICAL: error: 1 != 0
Stack trace:
  #0 [__igt_fail_assert+0xf1]
  #1 [check_workarounds+0xc9]
  #2 [__real_main122+0x1f5]
  #3 [main+0x29]
  #4 [__libc_start_main+0xf0]
  #5 [_start+0x29]
  #6 [<unknown>+0x29]
Subtest basic-read failed.
**** DEBUG ****
(gem_workarounds:1213) drmtest-DEBUG: Test requirement passed: fd >= 0
(gem_workarounds:1213) DEBUG: Address   val             mask            read            result
(gem_workarounds:1213) DEBUG: 0x0E4F0   0x81008100      0x00008100      0xFFFF8120      OK
(gem_workarounds:1213) DEBUG: 0x0E184   0x00200020      0x00000020      0x00000022      OK
(gem_workarounds:1213) DEBUG: 0x0E194   0x00140014      0x00000014      0x00000014      OK
(gem_workarounds:1213) DEBUG: 0x07004   0x00420042      0x00000042      0x000029C2      OK
(gem_workarounds:1213) DEBUG: 0x0E188   0x00080000      0x00000008      0x00008030      OK
(gem_workarounds:1213) DEBUG: 0x07300   0x80208020      0x00008020      0x0000C830      OK
(gem_workarounds:1213) DEBUG: 0x07300   0x00100010      0x00000010      0x0000C830      OK
(gem_workarounds:1213) DEBUG: 0x0E184   0x00020002      0x00000002      0x00000022      OK
(gem_workarounds:1213) DEBUG: 0x0E180   0x20002000      0x00002000      0x00002000      OK
(gem_workarounds:1213) DEBUG: 0x024D0   0x00002248      0xFFFFFFFF      0x00002248      OK
(gem_workarounds:1213) DEBUG: 0x024D4   0x00002580      0xFFFFFFFF      0x00002580      OK
(gem_workarounds:1213) DEBUG: 0x024D8   0x00007304      0xFFFFFFFF      0x00007304      OK
(gem_workarounds:1213) DEBUG: 0x04AB8   0x10000000      0x10000000      0x00000000      FAIL
(gem_workarounds:1213) WARNING: 0x04AB8 0x10000000      0x10000000      0x00000000      FAIL
(gem_workarounds:1213) DEBUG: 0x07300   0x40004000      0x00004000      0x0000C830      OK
(gem_workarounds:1213) DEBUG: 0x07014   0x01000100      0x00000100      0x00000100      OK
(gem_workarounds:1213) DEBUG: 0x0940C   0x02004001      0x00004000      0x02004001      OK
(gem_workarounds:1213) DEBUG: 0x0E100   0x00100010      0x00000010      0x00008050      OK
(gem_workarounds:1213) DEBUG: 0x024DC   0x0000B118      0xFFFFFFFF      0x0000B118      OK
(gem_workarounds:1213) CRITICAL: Test assertion failure function check_workarounds, file gem_workarounds.c:101:
(gem_workarounds:1213) CRITICAL: Failed assertion: workaround_fail_count() == 0
(gem_workarounds:1213) CRITICAL: error: 1 != 0
****  END  ****
Subtest basic-read: FAIL (0.005s)


 Software information
============================================
Kernel version                  : 4.7.0-rc7-nightly-895a714
Linux distribution              : Ubuntu 16.04 LTS
Architecture                    : 64-bit
xf86-video-intel version        : 2.99.917
Xorg-Xserver version            : 1.18.99.1
DRM version                     : 2.4.68
Cairo version                   : 1.15.2
Intel GPU Tools version         : ee5d5c4
Kernel driver in use            : i915
Hardware acceleration           :
Bios revision                   : 38.7
KSC revision                    : 1.20


 Hardware information
============================================
Platform                        : KBL (RVP7)
Motherboard model               : Kabylake Client platform
Motherboard type                : Skylake U DDR3L RVP7 Laptop
CPU information                 : Genuine Intel(R) CPU 0000 @ 2.60GHz
CPU Stepping                    : D7
GPU Card                        : Intel Corporation Device 5916 (prog-if 00 [VGA controller])

 Firmwares information
============================================
DMC fw loaded                   : yes
DMC version                     : 1.1

Attachments
==========================================
dmesg
Comment 1 Luis Botello 2016-08-01 20:45:46 UTC
Still failing on KBL with the following config:

Platform: KABY LAKE-U
CPU : Intel(R) Core(TM) @ 2.60GHz
MCP : KBL-U G0 2+2
QDF : QYQ8
Chipset PCH: SPT-LP C1
CRB : KABY LAKE U DDR3L RVP7 CRB FAB1

Software
BIOS: 38_07 KBLSE2R1.R00.X038.P07.1606200632 from https://ubit-artifactory-ba.intel.com/artifactory/simple/one-windows-local/Submissions/ifwi/KBL_PURPLE_IFWI_2016_WW26_1_00_HR'16/IFWI-KBL_PURPLE_IFWI_2016_WW26_1_00_HR'16-R.7z
ME FW: 11.5.0.1058
EC FW: 1.19
Ksc (EC FW): 1.20
Linux distribution: Ubuntu 16.04 64 bits
Kernel: 4.7.0 6f87e85 from http://cgit.freedesktop.org/drm-intel/
   commit 6f87e85fa302ffdb4cb9f4cd712691165923c7a2
 Author: Chris Wilson <chris@chris-wilson.co.uk>
  Date:   Mon Aug 1 15:53:41 2016 +0100
  drm-intel-nightly: 2016y-08m-01d-14h-53m-17s UTC integration manifest
drm: libdrm-2.4.70 f19cd3a from git://anongit.freedesktop.org/mesa/drm
mesa: mesa-11.2.2 3a9f628from git://anongit.freedesktop.org/mesa/mesa
cairo: 1.15.2 db8a7f1 from git://anongit.freedesktop.org/cairo
xserver: xorg-server-1.18.0-502 c833c08 from git://git.freedesktop.org/git/xorg/xserver
xf86-video-intel: 2.99.917-688 49daf5d from git://git.freedesktop.org/git/xorg/driver/xf86-video-intel
libva: libva-1.7.0-40 f7e2263 from git://git.freedesktop.org/git/vaapi/libva
vaapi-intel-driver: 1.7.0-64 1cd6795 from git://git.freedesktop.org/git/vaapi/intel-driverGuC 9.14 from http://rdvivi-hillsboro.jf.intel.com/firmware/kbl_guc_ver9_14.tar.bz2 
DMC 1.01 from: https://01.org/linuxgraphics/downloads/kabylake-dmc-1.01 
Intel-Gpu-Tools 1.15-188 53b4dfdfrom http://anongit.freedesktop.org/git/xorg/app/intel-gpu-tools.git
Comment 2 cprigent 2016-08-04 16:40:47 UTC
For info, subtests "reset" and "suspend-resume" return the same error
Comment 3 Mika Kuoppala 2016-08-11 08:09:39 UTC
> GPU Card                        : Intel Corporation Device 5916 (prog-if 00 [VGA controller])

For some reason the revision seems to be elusive in here. Please find out the rev
with 'lspci -n -s 00:02.0'.
Comment 4 Mika Kuoppala 2016-08-11 08:10:36 UTC
Created attachment 125690 [details] [review]
drm/i915/kbl: Limit WaDisableDynamicCreditSharing to A0
Comment 5 yann 2016-08-26 14:00:37 UTC
Confirmed this is fixed.
(https://patchwork.freedesktop.org/series/10945/)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.