drm/i915/kbl: Limit WaDisableDynamicCreditSharing to A0

Bspec states that this wa is for A0/B0 revs and this is noted in
commit b90420467232 ("drm/i915/kbl: Add WaDisableDynamicCreditSharing")
But other sources state that this is for A0 only. Also evidence indicates
that with some kbl variants the bit doesn't stick. So trust the other
sources and limit the scope for A0 only.

References: https://bugs.freedesktop.org/show_bug.cgi?id=96981
Fixes: b90420467232 ("drm/i915/kbl: Add WaDisableDynamicCreditSharing")
Cc: drm-intel-fixes@lists.freedesktop.org
Cc: Matthew Auld <matthew.auld@intel.com>
Signed-off-by: Mika Kuoppala <mika.kuoppala@intel.com>